tests/invalid/Tuple_Invalid_10.whiley
function swap(int x, int y) -> (int a, int b):
    return y,x
    
public export method test():
    //
    (int a, bool b) = swap(1,2)
